# sentopic-cell

./: README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: selected_offerings.csv  selected_reviews.csv
src/sentopic/: __init__.py  _sentopic.py
src/tests/: test_chunks.py  test_reviews.py
